--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'com.google.gms.google-services'
-    id 'com.github.dcendents.android-maven'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.tuz1425'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
