--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,9 @@ dependencies {
     implementation rootProject.ext.dependencies["ext_junit"]
     implementation rootProject.ext.dependencies["espresso"]
 
+    implementation rootProject.ext.dependencies["firebase-auth"]
+    //facebook
+    implementation rootProject.ext.dependencies["facebook-android"]
+
     implementation project(':aggregatepayment')
 }
