--- a/aggregatepayment/build.gradle
+++ b/aggregatepayment/build.gradle
@@ -21,13 +21,13 @@ android {
             minifyEnabled false
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    //compileOptions {
+    //    sourceCompatibility JavaVersion.VERSION_1_8
+    //    targetCompatibility JavaVersion.VERSION_1_8
+    //}
+    //kotlinOptions {
+    //    jvmTarget = '1.8'
+    //}
 }
 
 dependencies {
