--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,22 +18,22 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     //todo 正式发布后,需要删除此项.
-    signingConfigs {
-        release {
-            keyAlias 'key0'
-            keyPassword '123456'
-            storeFile file("./testKey.jks")
-            storePassword '123456'
-            v1SigningEnabled true
-            v2SigningEnabled true
-        }
-        debug {
-            keyAlias 'key0'
-            keyPassword '123456'
-            storeFile file("./testKey.jks")
-            storePassword '123456'
-        }
-    }
+    //signingConfigs {
+    //    release {
+    //        keyAlias 'key0'
+    //        keyPassword '123456'
+    //        storeFile file("./testKey.jks")
+    //        storePassword '123456'
+    //        v1SigningEnabled true
+    //        v2SigningEnabled true
+    //    }
+    //    debug {
+    //        keyAlias 'key0'
+    //        keyPassword '123456'
+    //        storeFile file("./testKey.jks")
+    //        storePassword '123456'
+    //    }
+    //}
 
     buildTypes {
         release {
