--- a/aggregatepayment/build.gradle
+++ b/aggregatepayment/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
 }
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.tuz1425'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
