--- a/config.gradle
+++ b/config.gradle
@@ -8,7 +8,7 @@ ext {
             versionCode      : 1,
             versionName      : "1.0",
             kotlinVersion    : "1.5.0",
-            applicationId    : "com.test.google",
+            applicationId    : "com.tuz.polymeric",
 
     ]
 
