feat: 完全引用lib内容,可以向上透传

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,5 @@ dependencies {
     //facebook
     //implementation rootProject.ext.dependencies["facebook-android"]
 
-    implementation project(':aggregatepayment')
+    api project(':aggregatepayment')
 }
