--- a/aggregatepayment/build.gradle
+++ b/aggregatepayment/build.gradle
@@ -21,6 +21,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     //compileOptions {
